--- a/view/home.view.html
+++ b/view/home.view.html
@@ -142,7 +142,7 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-address-card-o fa-fw w3-margin-right w3-xxlarge w3-text-teal" aria-hidden="true"></i>Certifications</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Microsoft Technology Associate (MTA)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Jun 2019</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <hr>
         </div>
         <div class="w3-container">
