--- a/view/home.view.html
+++ b/view/home.view.html
@@ -30,9 +30,9 @@
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>          
-          <p>Ruby on Rails</p>
+          <p>PHP</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div>
           <p>HTML</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
